--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   </head>
   <body ng-app="flapperNews" ng-controller="MainCtrl">
     <div ng-repeat="post in posts | orderBy: '-upvotes'">
+     <span ng-click="moreUpvotes(post)">^</span>
       {{post.title}} - upvotes: {{post.upvotes}} 
     </div>
+    <form ng-submit="addPost()">
+      <input type="text" ng-model="title"></input>
+      <button type="submit">Post</button>
+    </form>
   </body>
 </html>
